. [FIX] RenderTexture: If (running thread != cocos2d thread ) then it locks the OpenGL context. Prevents nasty crash
		added newCGImage (issue #1214)
		Added save buffer support on Mac
		Refactored save code: easier to read and mantain
. [FIX] Sprite: adding family of sprites to a batchnode works as expected (issue #1217)
. [FIX] SpriteBatch: Quad extensions are public
. [FIX] Tests: LabelTest with custom TTF font works on Mac too
. [FIX] Texture2D: initWithImage renamed with initWithCGImage
		JPEG: No need to convert JPG to PNG on iOS4 (issue #886 re-fixed)
		BMP: Images are displayed on iOS4 like on iOS5 (without alpha channel) [iOS5 BUG]
		'Delete texture' is executed on current thread (not on main thread)
. [FIX] TextureCache: async invokes callback on cocos2d thread (and not on main thread)
. [FIX] Types: kCCResolutionStandard renamed to kCCResolutioniPhone

version 2.0-beta2 17-Jan-2012
. [NEW] v1.1 Forward-ported changes:
		LabelTTF: word wrap works on Mac (issue #1074)
		Node: Added onExitTransitionDidStart (issue #792)
. [NEW] ActionManager: It is no longer a singleton. It is an ivar of director
. [NEW] Director: it is a subclass of UIViewController (iOS only)
. [NEW] Director: pushScene is the new recommended way to start the scene. Director will start the animation
		automatically once the view is displayed (iOS only)
. [NEW] Director: FPS & seconds per frame are displayed at the same time
. [NEW] EventDispatcher / TouchDispatcher: They are no longer singletons. They are an ivar of director.
. [NEW] GL View: Some classes were renamed to have more API concistency:
		MacWindow -> CCWindow (Mac)
		MacView -> CCGLView (Mac)
		EAGLView -> CCGLView (iOS)
		ESRenderer -> CCESRenderer (iOS)
		ES2Renderer -> CCES2Renderer (iOS)
		GLProgram -> CCGLProgram
. [NEW] Macros: Using __CC_PLATFORM_IOS/MAC internally. Suggested way for games too.
. [NEW] Menu: API CHANGE. "itemFrom..." was replaced with "itemWith..."