@@ -42,7 +42,11 @@
 			<key>SharedSettings</key>
 			<dict>
 				<key>OTHER_LDFLAGS</key>
-				<string>-lz</string>
+                <array>
+                    <string>-lz</string>
+                    <string>-ObjC</string>
+                    <string>-all_load</string>
+                </array>
 			</dict>
 			<key>Configurations</key>
 			<dict>
