@@ -26,16 +26,15 @@
 #ifndef GLES_RENDER_H
 #define GLES_RENDER_H
 
-#import <Availability.h>
+#import "cocos2d.h"
 
-#ifdef __IPHONE_OS_VERSION_MAX_ALLOWED
+#ifdef __CC_PLATFORM_IOS
 #import <OpenGLES/EAGL.h>
-#elif defined(__MAC_OS_X_VERSION_MAX_ALLOWED)
+#elif defined(__CC_PLATFORM_MAC)
 #import <OpenGL/OpenGL.h>
 #endif
 
 #include "Box2D.h"
-#import "cocos2d.h"
 
 struct b2AABB;
 
@@ -44,9 +43,9 @@ struct b2AABB;
 class GLESDebugDraw : public b2Draw
 {
 	float32 mRatio;
-	CCGLProgram	*mShaderProgram;
+	CCGLProgram *mShaderProgram;
 	GLint		mColorLocation;
-	
+
 	void initShader( void );
 public:
 	GLESDebugDraw();
@@ -67,9 +66,9 @@ public:
 
     void DrawPoint(const b2Vec2& p, float32 size, const b2Color& color);
 
-    void DrawString(int x, int y, const char* string, ...); 
+    void DrawString(int x, int y, const char* string, ...);
 
-    void DrawAABB(b2AABB* aabb, const b2Color& color);	
+    void DrawAABB(b2AABB* aabb, const b2Color& color);
 };
 
 
